--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
 {
   "name": "romanize-names",
   "version": "2.0.0",
-  "description": "Romanizing Chin
+  "description": "Romanizing Chinese names
