--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
   "name": "romanize-names",
   "version": "2.0.0",
-  "description": "Romanizing Chinese names
+  "description": "Romanizing Chinese names.",
+  "main": 
