--- a/package.json
+++ b/package.json
@@ -2,4 +2,5 @@
   "name": "romanize-names",
   "version": "2.0.0",
   "description": "Romanizing Chinese names.",
-  "main": 
+  "main": "index.js",
+  "scri
