--- a/package.json
+++ b/package.json
@@ -9,4 +9,4 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/muan/romaniz
+    "url": "git+https://github.com/muan/romanize-names.git
