--- a/package.json
+++ b/package.json
@@ -9,4 +9,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/muan/romanize-names.git
+    "url": "git+https://github.com/muan/romanize-names.git"
+  },
+ 
