--- a/package.json
+++ b/package.json
@@ -17,4 +17,5 @@
     "chinese",
     "mandarin"
   ],
-  "author": "Mu-An Chiou <me@muanchiou.com>
+  "author": "Mu-An Chiou <me@muanchiou.com>",
+  
