--- a/package.json
+++ b/package.json
@@ -20,4 +20,4 @@
   "author": "Mu-An Chiou <me@muanchiou.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mu
+    "url": "https://github.com/muan/roma
