--- a/package.json
+++ b/package.json
@@ -20,4 +20,5 @@
   "author": "Mu-An Chiou <me@muanchiou.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/muan/romanize-names/i
+    "url": "https://github.com/muan/romanize-names/issues"
+ 
