--- a/package.json
+++ b/package.json
@@ -22,4 +22,4 @@
   "bugs": {
     "url": "https://github.com/muan/romanize-names/issues"
   },
-  "homepage": "https://github.com/muan/roman
+  "homepage": "https://github.com/muan/romanize-names#
