--- a/package.json
+++ b/package.json
@@ -23,4 +23,5 @@
     "url": "https://github.com/muan/romanize-names/issues"
   },
   "homepage": "https://github.com/muan/romanize-names#readme",
-  "dependencies"
+  "dependencies": {
+    
