set ruby version

--- a/package.json
+++ b/package.json
@@ -24,4 +24,5 @@
   },
   "homepage": "https://github.com/muan/romanize-names#readme",
   "dependencies": {
-    "diacritics": "^1.2.
+    "diacritics": "^1.2.2",
+    "
