changes after code review

--- a/package.json
+++ b/package.json
@@ -27,4 +27,5 @@
     "diacritics": "^1.2.2",
     "unicode-mandarin-readings": "^1.0.0"
   },
-  "devDependencies": 
+  "devDependencies": {
+    "st
